--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </body>
 </html>
 
-<script>
-var deviceID = MediaDeviceInfo.deviceId;
-console.log(deviceID);
+<script src="https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs@2/dist/fingerprint2.min.js">
+  var deviceID = MediaDeviceInfo.deviceId;
+  console.log(deviceID);
 </script>
