--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   </body>
 </html>
 
-<script src="https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs@2/dist/fingerprint2.min.js">
- 
-</script>
+<script src="https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs@2/dist/fingerprint2.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/ua-parser-js@1.0.2/src/ua-parser.min.js"></script>
 
 <script src="javascript.js">
    window.onload=function(){
